Fixed jumping months

--- a/cal.html
+++ b/cal.html
@@ -24,6 +24,7 @@
                 </td>
                 <td rowspan="3">
                     <div id="cal"></div>
+                    <input type="hidden" id="datevalidator">
                 </td>
             </tr>
         </table>
