--- a/cal.html
+++ b/cal.html
@@ -11,7 +11,9 @@
         
 		<!-- loads mdp -->
         <script type="text/javascript" src="afl-mdp.js"></script>
+        
         <link rel="stylesheet" type="text/css" href="afldatepicker.css">
+        <link rel="stylesheet" type="text/css" href="humanity/jquery-ui-1.10.4.custom.min.css">
 	</head>
 	<body>
         <table>
