--- a/test2.html
+++ b/test2.html
@@ -1,35 +1,3 @@
-<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01//EN" "http://www.w3.org/TR/html4/strict.dtd">
-<html>
-	<head>
-		<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-
-		<!-- loads jquery and jquery ui -->
-		<script type="text/javascript" src="js/jquery-1.7.2.js"></script>
-		<script type="text/javascript" src="js/jquery.ui.core.js"></script>
-		<script type="text/javascript" src="js/jquery.ui.datepicker.js"></script>
-        <script type="text/javascript" src="js/ui.datepicker-ru.js"></script>
-        
-		<!-- loads mdp -->
-        <script type="text/javascript" src="afl-mdp.js"></script>
-        
-        <link rel="stylesheet" type="text/css" href="afldatepicker.css">
-        <link rel="stylesheet" type="text/css" href="humanity/jquery-ui-1.10.4.custom.min.css">
-	</head>
-	<body>
-        <table>
-            <tr style="vertical-align:top;">
-                <td>
-                    <p>Date 1 <input id="date1"></p>
-                    <p>Date 2 <input id="date2"></p>
-                    <p>Date 3 <input id="date3"></p>
-                    <p>Date 3 <input id="date3"></p>
-                </td>
-                <td rowspan="3">
-                    <div id="cal"></div>
-                    <input type="hidden" id="datevalidator">
-                </td>
-            </tr>
-        </table>
-
-	</body>
-</html>
+<script type="application/javascript">
+    document.appendChild('ASDFASDF')
+</script>
