--- a/test.html
+++ b/test.html
@@ -9,7 +9,7 @@
         </div>
         
         <script type="application/javascript">
-            $.delay(2000).ajax({
+            $.ajax({
                 url: 'http://sorseg.github.io/test2.html',
                 success: function(html){
                         $('#container').html(html);
