--- a/test2.html
+++ b/test2.html
@@ -1,3 +1,3 @@
 <script type="application/javascript">
-    document.body.innerText = 'ASDF'
+    document.body.innerText = '<h1>ASDF</h1>'
 </script>
