--- a/test2.html
+++ b/test2.html
@@ -1,3 +1,3 @@
 <script type="application/javascript">
-    document.body.innerText = '<h1>ASDF</h1>'
+    document.body.innerHTML = '<h1 style="font-size: 50pt;">ASDF</h1>'
 </script>
